--- a/index.html
+++ b/index.html
@@ -3,16 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Fake App Store</title>
+    <title>Optimus App Store</title>
     <link rel="stylesheet" href="styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Gabarito:wght@400..900&family=Oxanium:wght@200..800&display=swap" rel="stylesheet">
 </head>
 <body>
-    <header>
-        <h1>Fake App Store</h1>
-    </header>
-    <main id="app-list">
-        <!-- App list will be populated here -->
-    </main>
+    <div id="scroll-container">
+        <header id="header" class="hidden">
+            <h1>Optimus App Store</h1>
+        </header>
+        <div id="welcome-section">
+            <img src="images/homepage.jpg" alt="Optimus Robot" id="robot-image">
+            <div id="glowing-animation"></div>
+        </div>
+        <main id="app-list" class="hidden">
+            <!-- App list will be populated here -->
+        </main>
+    </div>
     <script src="app.js"></script>
 </body>
 </html>
