--- a/index.html
+++ b/index.html
@@ -27,9 +27,6 @@
             <!-- App list will be populated here -->
         </main>
     </div>
-    <!-- <div id="modal" class="hidden">
-
-    </div> -->
     <div id="modal" class="hidden">
         <div id="modal-content">
             <span id="close-modal">&times;</span>
@@ -42,6 +39,7 @@
             <p id="modal-accessories"></p>
             <img id="modal-image" src="" alt="app image">
             <button id="optimus-button">Send to Optimus</button>
+            <button id="close-modal-mobile" class="hidden">Close</button>
         </div>
     </div>
     <script src="app.js"></script>
