--- a/index.html
+++ b/index.html
@@ -42,6 +42,10 @@
             <button id="close-modal-mobile" class="hidden">Close</button>
         </div>
     </div>
+    <div id="neuralink-overlay" class="hidden">
+        <div id="neuralink-animation"></div>
+        <div id="neuralink-install-message">Installing...</div>
+    </div>
     <script src="app.js"></script>
 </body>
 
