fixed neuralink button state bug

--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
             <p id="modal-accessories"></p>
             <img id="modal-image" src="" alt="app image">
             <button id="optimus-button">Send to Optimus</button>
+            <button id="neuralink-button">Send to Neuralink</button>
             <button id="close-modal-mobile" class="hidden">Close</button>
         </div>
     </div>
