--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
         <div id="neuralink-install-message">Installing...</div>
     </div>
     <script src="app.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.9.3/dist/confetti.browser.min.js"></script>
 </body>
 
 </html>
