added footer with link to app list page

--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
         <main id="app-list" class="hidden">
             <!-- App list will be populated here -->
         </main>
+        <div id="footer">
+            <span>Made with 🫀 by <a href="https://colinhickey.ltd">Colin</a></span>
+        </div>
     </div>
     <div id="modal" class="hidden">
         <div id="modal-content">
